Add script editor and websocket remoting

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,14 @@
     <title>zdrct</title>
     <link href="/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link href="/style.css" rel="stylesheet" crossorigin="anonymous" />
+    <link href="/codemirror.css" rel="stylesheet" crossorigin="anonymous" />
   </head>
   <body>
     <script type="text/javascript">
       const BroadcasterID = {{ .BroadcasterID }};
     </script>
+    <script type="text/javascript" src="codemirror.js"></script>
+    <script type="text/javascript" src="go.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
