--- a/templates/_script.html
+++ b/templates/_script.html
@@ -1,17 +1,18 @@
       <div class="tab-pane fade{{ if eq .Tab "script" }} show active{{ end }}" id="nav-script" role="tabpanel" aria-labelledby="nav-script-tab">
       {{ if .TwitchBot.BroadcasterID }}
 	{{ if .IRCBot.IsOnline }}
-	<form method="POST" action="/loadscript">
-	  <textarea rows="20" cols="80" name="script" class="saveme" data-name="script">{{ .IRCBot.Script }}</textarea>
-	  <br />
-	  <input type="submit" value="Update script" />
-	</form>
+	<form method="POST" action="/loadscript" id="scriptform">
 	{{ else }}
-	<form method="POST" action="/startbot">
-          <textarea rows="20" cols="80" name="script" class="saveme" data-name="script">{{ .Config.Script }}</textarea>
-	  <br />
-	  <input type="submit" value="Start bot" />
-	</form>
+	<form method="POST" action="/startbot" id="scriptform">
 	{{ end }}
+	  <textarea id="script" rows="20" cols="80" name="script">{{ .Config.Script }}</textarea>
+	  <br />
+	{{ if .IRCBot.IsOnline }}
+	  <input type="submit" value="Update script" />
+	{{ else }}
+	  <input type="submit" value="Start bot" />
+	{{ end }}
+	<span id="scriptmsg"></span>
+	</form>
       {{ end }}
       </div>
