--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script type="text/javascript">
-      const BroadcasterID = {{ .BroadcasterID }};
+      const csrf = {{ .CSRF }};
     </script>
     <script type="text/javascript" src="codemirror.js"></script>
     <script type="text/javascript" src="go.js"></script>
