Use .fade class to make the alert fading user-overridalble

--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="alerts.js"></script>
     <p id="connecting">Connecting, please wait...</p>
 
-    <div id="msg" style="display: none;">
+    <div id="msg" class="fade">
       <img id="img" />
       <audio id="audio">
         <source id="audiosource" src="" />
