--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>zdrct</title>
-    <link href="/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link href="/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="/style.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="/codemirror.css" rel="stylesheet" crossorigin="anonymous" />
   </head>
@@ -35,6 +35,6 @@
 
     </div>
 
-    <script src="/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
