--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
 	<button class="nav-link{{ if eq .Tab "twitch" }} active{{ end }}" id="nav-twitch-tab" data-bs-toggle="tab" data-bs-target="#nav-twitch" type="button" role="tab" aria-controls="nav-twitch" aria-selected="true">Twitch</button>
+	<button class="nav-link{{ if eq .Tab "settings" }} active{{ end }}" id="nav-settings-tab" data-bs-toggle="tab" data-bs-target="#nav-settings" type="button" role="tab" aria-controls="nav-settings" aria-selected="true">Settings</button>
 	<button class="nav-link{{ if eq .Tab "script" }} active{{ end }}" id="nav-script-tab" data-bs-toggle="tab" data-bs-target="#nav-script" type="button" role="tab" aria-controls="nav-script" aria-selected="false">Script</button>
 	<button class="nav-link{{ if eq .Tab "wizard" }} active{{ end }}" id="nav-wizard-tab" data-bs-toggle="tab" data-bs-target="#nav-wizard" type="button" role="tab" aria-controls="nav-wizard" aria-selected="false">Actors</button>
 	<button class="nav-link{{ if eq .Tab "buttonwizard" }} active{{ end }}" id="nav-buttonwizard-tab" data-bs-toggle="tab" data-bs-target="#nav-buttonwizard" type="button" role="tab" aria-controls="nav-buttonwizard" aria-selected="false">Buttons and rewards</button>
@@ -27,10 +28,11 @@
 
     <div class="tab-content" id="nav-tabContent">
       {{ template "_twitch" . }}
-      {{ template "_doomexe" . }}
+      {{ template "_settings" . }}
       {{ template "_script" . }}
       {{ template "_wizard" . }}
       {{ template "_buttonwizard" . }}
+      {{ template "_doomexe" . }}
       {{ template "_rcon" . }}
 
     </div>
